--- a/src/components/AuthModal/AuthModal.module.scss
+++ b/src/components/AuthModal/AuthModal.module.scss
@@ -47,7 +47,7 @@
 
   font-size:1.5rem;
   background: var(--background-color-invert)
-    url('https://images.discours.io/unsafe/1600x/production/image/auth-page.jpg') center no-repeat;
+    url('auth-page.jpg') center no-repeat;
   background-size: cover;
   color: var(--default-color-invert);
   display: flex;
