--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -292,6 +292,7 @@ button {
     }
   }
 }
+
 //
 //.button--light {
 //  @include font-size(1.5rem);
@@ -340,6 +341,7 @@ button {
     width: 1.4em;
   }
 }
+
 //
 //.button--content-index {
 //  @include media-breakpoint-up(md) {
@@ -1071,7 +1073,7 @@ details {
   display: -webkit-box !important;
   overflow: hidden;
   position: relative;
-  -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   white-space: normal;
 }
